lint optimization