@@ -747,7 +747,7 @@ public class Convert extends Activity {
 						else {
 							// Not 7 Bit use the unicode system
 							sb.append("&#");
-							sb.append(new Integer(ci).toString());
+							sb.append(Integer.valueOf(ci).toString());
 							sb.append(';');
 						}
 					}
